chore: fix arrow margin bottom and remove gap for converter

--- a/packages/wallets/src/features/cashier/modules/WithdrawalCrypto/components/WithdrawalCryptoForm/components/WithdrawalCryptoAmountConverter/WithdrawalCryptoAmountConverter.scss
+++ b/packages/wallets/src/features/cashier/modules/WithdrawalCrypto/components/WithdrawalCryptoForm/components/WithdrawalCryptoAmountConverter/WithdrawalCryptoAmountConverter.scss
@@ -6,7 +6,7 @@
 
     @include mobile {
         flex-direction: column;
-        gap: 0.8rem;
+        gap: 0;
     }
 
     &__arrow {
@@ -24,6 +24,7 @@
 
             @include mobile {
                 rotate: 270deg;
+                margin-bottom: 2.2rem;
             }
         }
 
